--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
+
+body {
+    overflow-x: hidden;
+}
