--- a/src/app/products/pages/numbers-page/numbers-page.component.html
+++ b/src/app/products/pages/numbers-page/numbers-page.component.html
@@ -4,7 +4,7 @@
     </p>
 </p-panel>
 
-<div class="grid mx-0">
+<div class="grid">
 
     <div class="col-12 md:col-4">
         <p-card header="Ventas Netas" subheader="del presente año">
