--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -8,25 +8,28 @@
     <div class="p-toolbar-group-start">
         <p-button   class="mr-2"
                     label="Toogle Case" 
-                    icon="pi pi-search"
+                    icon="pi pi-sort-alt"
                     (click)="toogleUppercase()"
                     />
     </div>
 
     <div class="p-toolbar-group-end">
-        <p-button   class="mr-2" 
+        <p-button   class="mr-2"
+                    (onClick)="changeOrder('name')"
                     label="Por nombre" 
-                    icon="pi pi-print"
+                    icon="pi pi-sort-alt"
                     styleClass="p-button-success"
                     />
-        <p-button   class="mr-2" 
+        <p-button   class="mr-2"
+                    (onClick)="changeOrder('canFly')"
                     label="Por volar" 
-                    icon="pi pi-upload"
+                    icon="pi pi-sort-alt"
                     styleClass="p-button-danger"
                     />
-        <p-button   class="mr-2" 
+        <p-button   class="mr-2"
+                    (onClick)="changeOrder('color')"
                     label="Por color" 
-                    icon="pi pi-upload"
+                    icon="pi pi-sort-alt"
                     styleClass="p-button-help"
                     />
     </div>
@@ -37,7 +40,7 @@
         <div class="col mt-2">
             <p-panel>
     
-                <p-table [value]="heroes">
+                <p-table [value]="heroes | sortBy:orderBy">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Name</th>
@@ -49,7 +52,7 @@
                         <tr>
                             <td>{{ product.name }}</td>
                             <td>{{ product.canFly | canFly | titlecase }}</td>
-                            <td>{{ product.color }}</td>
+                            <td>{{ product.color | titlecase }}</td>
                         </tr>
                     </ng-template>
                 </p-table>
